prusti-tests/tests/parse/ui/predicate_fail-2.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
  --> $DIR/predicate_fail-2.rs:11:1
   |
11 | fn result_is_one() -> bool;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: change the delimiters to curly braces
   |
11 | {}
   | ^
help: add a semicolon
   |
11 | fn result_is_one() -> bool;;
   |                            ^

error: you can only use `#[predicate]` on function definitions
  --> $DIR/predicate_fail-2.rs:11:1
   |
11 | fn result_is_one() -> bool;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: macros that expand to items must be delimited with braces or followed by a semicolon
  --> $DIR/predicate_fail-2.rs:15:1
   |
15 | static FOO: usize = 0;
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
help: change the delimiters to curly braces
   |
15 | {}
   | ^
help: add a semicolon
   |
15 | static FOO: usize = 0;;
   |                       ^

error: you can only use `#[predicate]` on function definitions
  --> $DIR/predicate_fail-2.rs:15:1
   |
15 | static FOO: usize = 0;
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

